--- a/study2/analysis/2_emotion.qmd
+++ b/study2/analysis/2_emotion.qmd
@@ -936,6 +936,72 @@ p1
 
 ```
 
+```{r}
+m1 <- glmmTMB::glmmTMB(Arousal ~ Gender / Condition + (Condition | Participant) + (1|Stimulus),data = df, 
+                      family=glmmTMB::ordbeta(),
+                      control = glmmTMB::glmmTMBControl(parallel = 8))
+m2 <- glmmTMB::glmmTMB(Arousal ~ Gender / Condition + (Condition | Participant) + (1|Stimulus),
+                      data=filter(df, ConditionBelief == "True"), 
+                      family=glmmTMB::ordbeta(),
+                      control = glmmTMB::glmmTMBControl(parallel = 8))
+m3 <- glmmTMB::glmmTMB(Arousal ~ Gender / Condition  + (Condition | Participant) + (1|Stimulus),
+                      data=filter(df, ConditionBelief == "True", Feedback_AILessAttractive=="True"), 
+                      family=glmmTMB::ordbeta(),
+                      control = glmmTMB::glmmTMBControl(parallel = 8))
+m4 <- glmmTMB::glmmTMB(Arousal ~ Gender / Condition  + (Condition | Participant) + (1|Stimulus),
+                      data=filter(df, ConditionBelief == "True", Feedback_AIMoreAttractive=="True"), 
+                      family=glmmTMB::ordbeta(),
+                      control = glmmTMB::glmmTMBControl(parallel = 8))
+
+stars2 <- data.frame(label=c("**", "***", "*", "*", "**"), 
+                    Gender=fct_relevel(c("Male", "Male", "Male", "Female"), 
+                                    "Male", "Female"), 
+                    Type=c("All trials", "Believed trials", "'AI was less attractive'", "'AI was more attractive",
+                           "Believed trials", "'AI was less arousing'"), 
+                    y=c(0.65, 0.65, 0.65, 0, 0.65))
+
+pred2 <- rbind(
+  estimate_relation(m1) |> 
+    mutate(Type = "All trials"),
+  estimate_relation(m2) |> 
+    mutate(Type = "Believed trials"),
+  estimate_relation(m3) |> 
+    mutate(Type = "'AI was less attractive'"),
+  estimate_relation(m4) |> 
+    mutate(Type = "'AI was more attractive'"))
+
+p2 <- pred2 |> 
+  mutate(Type = fct_relevel(Type, "All trials", "Believed trials", "'AI was less attractive'", "'AI was more attractive'")) |> 
+  ggplot(aes(x=Type, y=Predicted)) +
+  geom_hline(yintercept=0, color="darkgrey") +
+  geom_line(aes(group=Condition, color=Condition), position = position_dodge(width=0.2), alpha=0.8, linewidth=0.1) +
+  geom_bar(stat="identity", aes(fill=Condition), position = position_dodge(width=0.2), width=0.2, alpha=0.6) +
+  geom_pointrange(aes(ymin = CI_low, ymax=CI_high, color=Condition), position = position_dodge(width=0.2), size=0.2) +
+  geom_rect(data=data.frame(Type="All trials", Predicted=0.1, Gender=as.factor("Male")),
+            aes(xmin=0.7, xmax=1.3, ymin=0.35, ymax=0.55), color="#8BC34A", alpha=0) +
+  geom_rect(data=data.frame(Type="All trials", Predicted=0.1, Gender=as.factor("Female")),
+            aes(xmin=0.7, xmax=1.3, ymin=0.30, ymax=0.48), color="#8BC34A", alpha=0) +
+  # geom_text(data=stars2, aes(y=y, label=label), hjust=0.5, size=3) +
+  facet_grid(~Gender) +
+  scale_y_continuous(labels=scales::percent) +
+  scale_color_manual(values=c("AI-Generated"="#2196F3", "Photograph"="#F44336")) +
+  scale_fill_manual(values=c("AI-Generated"="#2196F3", "Photograph"="#F44336")) +
+  labs(y="Arousal",
+       tag = "B") +
+  theme_minimal() +
+  theme(axis.title.x = element_blank(),
+        axis.text.x = element_text(angle=25, hjust=1, vjust=1.1, size=9),
+        axis.text.y = element_text(size = 8),
+        axis.title.y = element_text(size = 10),
+        strip.placement = "outside",
+        strip.background.x = element_rect(fill=c("lightgrey"), color=NA),
+        strip.text.x = element_text(size = 10),
+        legend.position = "none")
+
+p2
+
+```
+
 
 ## Notes/ Questions
 
